[package]
name = "serde_sheets"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = "1.0"
serde_json = "1.0"
google-sheets4 = "2.0"
hyper = { version = "0.14", default-features = false }
hyper-rustls = "^0.22"
yup-oauth2 = "^5.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }