[package]
name = "serde_sheets"
version = "0.1.1"
edition = "2021"
description = "Read and write structs directly from google sheets using serde and csv"
license = "MIT"

[dependencies]
csv = "1.1"
serde = "1.0"
serde_json = "1.0"
google-sheets4 = "*"
hyper = { version = "*" }
hyper-rustls = { version = "*", features = ["rustls-native-certs"] }
yup-oauth2 = "*"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
