[package]
name = "serde_sheets"
version = "0.1.1"
edition = "2021"
description = "Read and write structs directly from google sheets using serde and csv"
license = "MIT"

[dependencies]
csv = "1.1"
serde = "1.0"
serde_json = "1.0"
google-sheets4 = "3.1"
hyper = { version = "0.14" }
hyper-rustls = { version = "0.23", features = ["rustls-native-certs"] }
yup-oauth2 = "6.6"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
